; ModuleID = '/home/carl/AnghaBench/memcached/extr_assoc.c_assoc_init.c'
source_filename = "/home/carl/AnghaBench/memcached/extr_assoc.c_assoc_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@hashpower = common dso_local global i32 0, align 4
@primary_hashtable = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [27 x i8] c"Failed to init hashtable.\0A\00", align 1
@EXIT_FAILURE = common dso_local global i32 0, align 4
@stats_state = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @assoc_init(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %5, label %7

5:                                                ; preds = %1
  %6 = load i32, i32* %2, align 4
  store i32 %6, i32* @hashpower, align 4
  br label %7

7:                                                ; preds = %5, %1
  %8 = load i32, i32* @hashpower, align 4
  %9 = call i32 @hashsize(i32 %8)
  %10 = call i32 @calloc(i32 %9, i32 8)
  store i32 %10, i32* @primary_hashtable, align 4
  %11 = load i32, i32* @primary_hashtable, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %18, label %13

13:                                               ; preds = %7
  %14 = load i32, i32* @stderr, align 4
  %15 = call i32 @fprintf(i32 %14, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0))
  %16 = load i32, i32* @EXIT_FAILURE, align 4
  %17 = call i32 @exit(i32 %16) #3
  unreachable

18:                                               ; preds = %7
  %19 = call i32 (...) @STATS_LOCK()
  %20 = load i32, i32* @hashpower, align 4
  store i32 %20, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @stats_state, i32 0, i32 0), align 4
  %21 = load i32, i32* @hashpower, align 4
  %22 = call i32 @hashsize(i32 %21)
  %23 = sext i32 %22 to i64
  %24 = mul i64 %23, 8
  %25 = trunc i64 %24 to i32
  store i32 %25, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @stats_state, i32 0, i32 1), align 4
  %26 = call i32 (...) @STATS_UNLOCK()
  ret void
}

declare dso_local i32 @calloc(i32, i32) #1

declare dso_local i32 @hashsize(i32) #1

declare dso_local i32 @fprintf(i32, i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @STATS_LOCK(...) #1

declare dso_local i32 @STATS_UNLOCK(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
